org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
.CRM_Contact_Form_Search_Advanced .crm-results-block,
.CRM_Contact_Form_Search_Basic .crm-results-block {
  @extend %block-with-shadow;
  margin-top: 20px;

  .crm-search-tasks {
    border-radius: 0 !important;
    border-bottom: solid 1px $crm-background;
    margin-bottom: 15px !important;
    box-shadow: none;
  }

  .crm-pager {
    margin-bottom: 0;
  }

  .sticky {
    th {
      line-height: 35px !important;

      &:not(:first-child):not(:nth-child(2)) {
        padding-left: 0 !important;
      }

      .sticky-header {
        height: 30px;
      }

      &:last-child {
        &,
        span {
          line-height: normal;
        }
      }
    }
  }

  #alpha-filter,
  .crm-search-tasks,
  .crm-selection-reset {
    background: #ffffff !important;
    padding: 15px !important;
  }

  #alpha-filter {
    float: left;
    margin-bottom: 15px !important;

    a {
      color: $brand-primary;
    }

    + .crm-selection-reset {
      margin-bottom: 15px !important;
      float: right;
      margin-top: 10px;
    }
  }

  .crm-pager,
  table {
    box-shadow: none !important;
  }

  table.selector {
    @extend %crm-table;
    border-top: solid 1px $crm-background;
    padding-top: 15px !important;
    margin-top: 15px !important;

    tr {
      padding-left: 0 !important;

      > td,
      > th {
        vertical-align: middle;
      }

      > td:last-child {
        padding-right: 15px;
        text-align: right;
      }

      > td:not(:last-child),
      > th:not(:last-child) {
        line-height: 20px;

        .privacy-flag {
          width: 27px;
          margin-left: 5px;
        }

        > span {
         display: flex;
         align-items: center;
       }
      }
    }

    tr.highlight > td {
      background: $gray-light !important;
    }

    ul.panel {
      @extend %block-with-shadow;
      border: solid 1px $crm-background !important;
      margin-top: 10px !important;

      li {
        background: #ffffff !important;
        padding: 0 !important;

        a.crm-hover-button.action-item {
          border: 0 !important;
          border-radius: 0 !important;
          line-height: 30px !important;
          color: $crm-copy !important;
          font-weight: initial;

          &:hover {
            background-color: $crm-background !important;
          }
        }
      }
    }

    .crm-icon {
      background: none !important;
      text-indent: 0 !important;
      top: -3px;
      position: relative;

      &::before {
        text-indent: 0 !important;
      }

      &.Individual-icon::before {
        @include fa-icon(13px, '\f007');
      }

      &.Household-icon::before {
        @include fa-icon(13px, '\f015');
      }

      &.Organization-icon::before {
        @include fa-icon(13px, '\f1ad');
      }
    }
  }

  .font-size12pt {
    font-size: 18px;
    font-weight: 600;
    color: $gray-darker;
    padding-bottom: 10px;
  }

  .font-size11pt {
    font-size: 13px;
    font-weight: 600;
    color: $gray-darker;
  }
}

